Bugfix ::  Fixing alignment of FX button  (#2438)
* fx alignment debugging

* updates

* fixing positioning

* fixing positioning

* resolving undefined issue

* fixing positioning in style tab pane

* code cleanup

* pr changes :: aligning fx with label

* adjusting margin

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -107,6 +107,9 @@ button {
     font-size: 12px;
     color: #61656c;
   }
+  .style-fx{
+    margin-top: 3px !important;
+  }
 }
 .editor {
   .header-container {
@@ -1128,6 +1131,14 @@ button {
       }
     }
   }
+}
+.fx-container{
+  position: relative;
+}
+.fx-common{
+  position: absolute;
+  top: -45px;
+  right: 0px;
 }
 
 .fx-button {
